Initial commit with Simple POST and GET APIs

--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ jacocoTestCoverageVerification {
 }
 
 dependencies {
-    implementation platform('io.dropwizard:dropwizard-bom:2.1.6')
+    implementation platform('io.dropwizard:dropwizard-bom:2.1.2')
     implementation 'io.dropwizard:dropwizard-testing'
     implementation 'ru.vyarus:dropwizard-guicey:5.7.1'
 
@@ -70,4 +70,10 @@ dependencies {
     testImplementation 'org.assertj:assertj-core:3.24.2'
     testImplementation 'net.javacrumbs.json-unit:json-unit:2.37.0'
     testImplementation 'net.javacrumbs.json-unit:json-unit-assertj:2.37.0'
+    compileOnly 'org.projectlombok:lombok:1.18.22'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.22'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
 }
